--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "8ea53160-fb2f-4f03-bae1-6ce79877859f",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "raw_prompt = \"\"\"\n",
     "For each item that the buyer agreed to purchase, return the item name, item description, quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item (quantity * (unit price - unit discount)) . Each sku of the purchased item should be treated as a separate item.\n",
     "\n",
-    "Output the result in dictionary format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
+    "Output the result in JSON format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
     "\n",
     "{ \"orderDetails\":{ \"orderDate\": \"\", \"orderNum\": null, }, \"buyer\":{ \"companyName\": \"\", \"pointOfContact\": \"\", \"contactEmail\": \"\", \"contactPhone\": \"\", \"shippingAddress\": \"\", }, \"lineItems\":[{ \"itemNumber\": null, \"description\": \"\", \"quantity\": null, \"unitPrice\": null, \"discount\": null, “totalPrice”: null}]}\n",
     "\"\"\""
@@ -18,49 +18,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "7feb5efc-a9a0-43d5-b568-a6989e05e77f",
    "metadata": {},
    "outputs": [],
    "source": [
     "raw_prompt = \"\"\"\n",
-    "For each item that the buyer agreed to purchase, return the item name, item description, quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item calculated as quantity * (unit price - unit discount). Treat each SKU of the purchased item as a separate entity.\n",
+    "For each item that the buyer agreed to purchase, return the item name and item description directly under \"description\" without nesting them within another object, along with the quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item calculated as (quantity * (unit price - unit discount)). Treat each SKU of the purchased item as a separate entry under \"lineItems\". \n",
     "\n",
-    "Please output the result as an actual Python dictionary object, not as a string. Each line item should be represented under `lineItems`. Include all non-quantity and price-related details of each item within its `description` as a string.\n",
-    "\n",
-    "Ensure to include the order date and provide a placeholder for the order number if it's not available. For the buyer information, include the company name, point of contact, contact email, and also ensure to fill in the contact phone and shipping address or explicitly note if these are intentionally left blank.\n",
-    "\n",
-    "The expected format is as follows:\n",
+    "Output the result in JSON format, ensuring all non-quantity and price-related details of the order and buyer are fully completed, including order number, contact phone, and shipping address. Follow the example structure below, but adjust it to directly include item name and description details under \"description\" for improved clarity and adherence to the expected output structure.\n",
     "\n",
     "{\n",
     "  \"orderDetails\": {\n",
-    "    \"orderDate\": \"YYYY-MM-DD\",\n",
-    "    \"orderNum\": \"placeholder or specific reason for absence\",\n",
-    "  },\n",
-    "  \"buyer\": {\n",
-    "    \"companyName\": \"Example Company\",\n",
-    "    \"pointOfContact\": \"John Doe\",\n",
-    "    \"contactEmail\": \"john.doe@example.com\",\n",
-    "    \"contactPhone\": \"123-456-7890\",\n",
-    "    \"shippingAddress\": \"123 Example St, City, Country\",\n",
-    "  },\n",
-    "  \"lineItems\": [\n",
-    "    {\n",
-    "      \"itemNumber\": \"SKU123\",\n",
-    "      \"description\": \"Item description here\",\n",
-    "      \"quantity\": 1,\n",
-    "      \"unitPrice\": 100.00,\n",
-    "      \"discount\": 5.00,\n",
-    "      “totalPrice”: 95.00\n",
-    "    }\n",
-    "  ]\n",
+    "    \"orderDate\": \"\",\n",
+    "    \"orderNum\": \"\",\n",
+    "    \"buyer\": {\n",
+    "      \"companyName\": \"\",\n",
+    "      \"pointOfContact\": \"\",\n",
+    "      \"contactEmail\": \"\",\n",
+    "      \"contactPhone\": \"\",\n",
+    "      \"shippingAddress\": \"\"\n",
+    "    },\n",
+    "    \"lineItems\": [\n",
+    "      {\n",
+    "        \"itemNumber\": \"\",\n",
+    "        \"description\": {\n",
+    "          \"itemName\": \"\",\n",
+    "          \"itemDescription\": \"\"\n",
+    "        },\n",
+    "        \"quantity\": \"\",\n",
+    "        \"unitPrice\": \"\",\n",
+    "        \"discount\": \"\",\n",
+    "        \"totalPrice\": \"\"\n",
+    "      }\n",
+    "    ]\n",
+    "  }\n",
     "}\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "8ab1c0e4-9b7c-4db9-86f5-b706c93a9a70",
    "metadata": {},
    "outputs": [],
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "0f6d9b0a-b07c-4483-be0f-bf44f6477a7d",
    "metadata": {},
    "outputs": [],
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "57aecb0f-ed2c-4d8e-a28f-6422e9099310",
    "metadata": {},
    "outputs": [],
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "723c6b5c-f10d-4b4c-bcce-0964ad0834c5",
    "metadata": {},
    "outputs": [],
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "id": "958f072c-d4e7-44c0-96dd-3b9c3a84a046",
    "metadata": {},
    "outputs": [],
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "5c8de818-8a09-4056-866c-443206bc1d94",
    "metadata": {},
    "outputs": [
@@ -142,14 +141,14 @@
        "        raw=\n",
        "For each item that the buyer agreed to purchase, return the item name, item description, quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item (quantity * (unit price - unit discount)) . Each sku of the purchased item should be treated as a separate item.\n",
        "\n",
-       "Output the result in dictionary format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
+       "Output the result in JSON format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
        "\n",
        "{ \"orderDetails\":{ \"orderDate\": \"\", \"orderNum\": null, }, \"buyer\":{ \"companyName\": \"\", \"pointOfContact\": \"\", \"contactEmail\": \"\", \"contactPhone\": \"\", \"shippingAddress\": \"\", }, \"lineItems\":[{ \"itemNumber\": null, \"description\": \"\", \"quantity\": null, \"unitPrice\": null, \"discount\": null, “totalPrice”: null}]}\n",
        ",\n",
        "        mod=\n",
        "For each item that the buyer agreed to purchase, return the item name, item description, quantity purchased, unit price in dollars, unit discount in dollars, and final total price per item (quantity * (unit price - unit discount)) . Each sku of the purchased item should be treated as a separate item.\n",
        "\n",
-       "Output the result in dictionary format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
+       "Output the result in JSON format following the example below. Each line item should have its own list under lineItems. Include all non quantity and price related details of each item under its description.\n",
        "\n",
        "{ \"orderDetails\":{ \"orderDate\": \"\", \"orderNum\": null, }, \"buyer\":{ \"companyName\": \"\", \"pointOfContact\": \"\", \"contactEmail\": \"\", \"contactPhone\": \"\", \"shippingAddress\": \"\", }, \"lineItems\":[{ \"itemNumber\": null, \"description\": \"\", \"quantity\": null, \"unitPrice\": null, \"discount\": null, “totalPrice”: null}]}\n",
        ",\n",
@@ -161,8 +160,7 @@
        "\tunit_price_in_dollars,\n",
        "\tunit_discount_in_dollars,\n",
        "\tfinal_total_price_per_item,\n",
-       "\tsku_treatment,\n",
-       "\tnon_quantity_and_price_details\n",
+       "\tsku_treatment_as_separate_item\n",
        "    )\n",
        "    CriteriaStruct(\n",
        "        UserCriteria(\n",
@@ -172,18 +170,18 @@
        "        AgentCriteria(\n",
        "            accuracy_of_item_details,\n",
        "\t    correct_calculation_of_total_price,\n",
+       "\t    correct_JSON_format,\n",
        "\t    completeness_of_order_details,\n",
-       "\t    completeness_of_buyer_information,\n",
-       "\t    correct_formatting,\n",
-       "\t    correct_data_types,\n",
-       "\t    no_duplicate_line_items,\n",
-       "\t    comprehensive_item_descriptions\n",
+       "\t    individual_treatment_of_skus,\n",
+       "\t    correctness_of_lineItems_structure,\n",
+       "\t    no_redundant_or_missing_information,\n",
+       "\t    clarity_and_readability\n",
        "        )\n",
        "    )\n",
        ")"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
